# UTTT_player

./: .gitignore  CMakeLists.txt  codingame_file.c
src/: arena.c  arena.h  arena_opponent.c  arena_opponent.h  bitboard.c  bitboard.h  board.c  board.h  find_best_move.c  find_best_move.h  find_next_move.c  find_next_move.h  handle_turn.c  handle_turn.h  main.c  main.h  mcts_node.c  mcts_node.h  player.c  player.h  player_bitboard.c  player_bitboard.h  random.c  random.h  smart_rollout.c  smart_rollout.h  square.c  square.h  util.c  util.h
src/arena/: arena.c  arena_opponent.c  arena_opponent.h  merge_games.py
src/arena/neural_network/: export_model.py  merge_games.py  merge_positions.py  network.py  pickle_positions.py  training.py
src/arena/neural_network/scripts/: export_model.py  merge_games.py  merge_positions.py  pickle_positions.py
src/board/: board.c  board.h  player_bitboard.c  player_bitboard.h  rollout.c  rollout.h  smart_rollout.c  smart_rollout.h  square.c  square.h
src/mcts/: find_next_move.c  find_next_move.h  mcts_node.c  mcts_node.h  priors.c  priors.h  solver.c  solver.h
src/misc/: player.h  random.c  random.h  rng.h  util.c  util.h
src/nn/: clipped_relu.h  forward.c  forward.h  linear.h  lookup_table_indices.c  lookup_table_indices.h  parameters.c  parameters.h  sparse_linear.h
test/: bitboard_tests.c  bitboard_tests.h  board_tests.c  find_next_move_tests.c  integration_tests.c  integration_tests.h  mcts_node_tests.c  mcts_node_tests.h  player_bitboard_tests.c  player_bitboard_tests.h  profile_simulations.c  profile_simulations.h  smart_rollout_tests.c  smart_rollout_tests.h  test_board.c  test_board.h  test_main.c  test_main.h  test_square.c  test_square.h  test_util.c  test_util.h  tests_main.c  tests_main.h
test/board/: board_tests.c  board_tests.h  player_bitboard_tests.c  smart_rollout_tests.c
test/mcts/: find_next_move_tests.c  find_next_move_tests.h  mcts_node_tests.c  priors_tests.c  priors_tests.h  solver_tests.c  solver_tests.h
test/nn/: forward_tests.c  forward_tests.h
